--- a/css/_nav-bar.scss
+++ b/css/_nav-bar.scss
@@ -12,7 +12,7 @@ body{
 
                 nav{
                     width: 100%;
-                    display: inline-flex;
+                    display: flex;
                     flex-flow: row nowrap;
                     align-items: center;
                     justify-content: space-between;
@@ -22,14 +22,13 @@ body{
                     }
                     ul{
                         list-style: none;
-                        display: inline-flex;
-
+                        display: flex;
+                        justify-content: flex-end;
                         
                         
                                              
                         .list_theme{
-                            display: inline-flex;
-                            
+                            display: flex;                           
                             
 
                             &:hover > li .submenu{
