--- a/css/_section-search.scss
+++ b/css/_section-search.scss
@@ -22,7 +22,7 @@ body{
                     
                 }
 
-                .input_button_search{
+                #input_button_search{
                     display: flex;
                     flex-flow: row nowrap;
                     justify-content: space-evenly;
