--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -20,8 +20,14 @@ $color-background-boxmenu-day:#E6E6E6;
 $box-shadow-boxmenu-day: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 $color-background-button-hover-day:#997D97;
 $box-shadow-button-hover-day:inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+$color-text-active-withoutborder: #110038;
  
 //Variables Section-search
 
 $color-background-search-div: #E6E6E6;
 $box-shadow-search-div: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+
+//Variables Top-input-Section
+
+$color-border-top-input-section-day: 1px solid #E6BBE2;
+$box-shadow-top-input-section-day: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
