--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,38 @@
+:root {
+  --background-body: #FFFFFF;
+  --color-font-top-bar: #FFFFFF;
+  --color-font-button:#110038;
+  --color-gradient-bar: linear-gradient(90deg, rgba(65,128,246,1) 0%, rgba(247,201,243,1) 100%);
+  --font-family-principal: 'Chakra Petch', sans-serif;
+  --box-shadow-top-bar: 0 1px 0 0 #110038;
+  --color-background-button: #F7C9F3;
+  --box-shadow-button: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  --color-border-button1-menu: 1px solid #CCA6C9;
+  --color-border-button2-menu: 1px solid #808080;
+  --color-background-button1-menu: #FFF4FD;
+  --color-background-button2-menu: #F0F0F0;
+  --color-font-button1:#110038;
+  --box-shadow-button1-menu: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+  --box-shadow-button2-menu: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  --color-background-boxmenu:#E6E6E6;
+  --box-shadow-boxmenu: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  --color-background-button-hover:#997D97;
+  --box-shadow-button-hover:inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  --border-hover-dashed: 1px dashed #110038;
+  --color-text-active-withoutborder: #110038;
+  --color-background-search-div: #E6E6E6;
+  --box-shadow-search-div: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  --color-border-top-input-section: 1px solid #E6BBE2;
+  --box-shadow-top-input-section: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+  --color-background-button-gif: #4180F6;
+  --box-shadow-button-gif: inset -1px -1px 0 0 #284F99, inset 1px 1px 0 0 #FFFFFF; }
+
 body .top_bar {
-  background: #4180f6;
-  background: linear-gradient(90deg, #4180f6 0%, #f7c9f3 100%);
-  box-shadow: 0 1px 0 0 #110038; }
+  margin: 1px 0px;
+  background: var(--color-gradient-bar);
+  box-shadow: var(--box-shadow-top-bar); }
   body .top_bar h2 {
-    color: #FFFFFF;
+    color: var(--color-font-top-bar);
     font-size: 12px;
     font-weight: 400; }
 
@@ -38,8 +67,8 @@ body .contenedor .contenedor_center header {
             position: absolute;
             display: block;
             visibility: hidden;
-            background-color: #E6E6E6;
-            box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+            background-color: var(--color-background-boxmenu);
+            box-shadow: var(--box-shadow-boxmenu); }
             body .contenedor .contenedor_center header nav ul .list_theme li .submenu li {
               margin: 13px 10px;
               padding: 0;
@@ -53,30 +82,36 @@ body .contenedor .contenedor_center header {
                   text-decoration: underline; }
               body .contenedor .contenedor_center header nav ul .list_theme li .submenu li .button1 {
                 padding: 7px 60px 7px 16px;
-                background-color: #FFF4FD;
-                box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
-                border: 1px solid #CCA6C9; }
+                background-color: var(--color-background-button1-menu);
+                box-shadow: var(--box-shadow-button1-menu);
+                border: var(--color-border-button1-menu);
+                color: var(--color-font-button1); }
+                body .contenedor .contenedor_center header nav ul .list_theme li .submenu li .button1:hover {
+                  background-color: var(--color-background-button); }
               body .contenedor .contenedor_center header nav ul .list_theme li .submenu li .button2 {
                 padding: 7px 49px 7px 16px;
-                background-color: #F0F0F0;
-                box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
-                border: 1px solid #808080; }
+                background-color: var(--color-background-button2-menu);
+                box-shadow: var(--box-shadow-button2-menu);
+                border: var(--color-border-button2-menu);
+                color: var(--color-font-button); }
+                body .contenedor .contenedor_center header nav ul .list_theme li .submenu li .button2:hover {
+                  background-color: var(--color-background-button); }
         body .contenedor .contenedor_center header nav ul .list_theme .button_arrow a {
           padding: 6px 12px; }
       body .contenedor .contenedor_center header nav ul li {
         margin: 0 10px;
         padding: 1px;
         border: 1px solid #110038;
-        box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-        background-color: #F7C9F3; }
+        box-shadow: var(--box-shadow-button);
+        background-color: var(--color-background-button); }
         body .contenedor .contenedor_center header nav ul li:hover > a {
-          border: 1px dashed #110038; }
+          border: var(--border-hover-dashed); }
         body .contenedor .contenedor_center header nav ul li:hover {
-          background-color: #997D97;
-          box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF; }
+          background-color: var(--color-background-button-hover);
+          box-shadow: var(--box-shadow-button-hover); }
         body .contenedor .contenedor_center header nav ul li a {
           text-decoration: none;
-          color: #110038;
+          color: var(--color-font-button);
           font-size: 16px;
           display: block;
           padding: 7px 26px; }
@@ -99,8 +134,8 @@ body .contenedor .contenedor_center header {
 body .contenedor .contenedor_center .search_input {
   display: flex;
   flex-flow: column nowrap;
-  background-color: #E6E6E6;
-  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+  background-color: var(--color-background-search-div);
+  box-shadow: var(--box-shadow-search-div); }
   body .contenedor .contenedor_center .search_input .top_bar {
     box-shadow: none;
     width: 100%; }
@@ -115,8 +150,8 @@ body .contenedor .contenedor_center .search_input {
       height: 48px;
       width: 82%;
       margin: 12px 0;
-      font-family: "Chakra Petch", sans-serif;
-      color: #110038; }
+      font-family: var(--font-family-principal);
+      color: var(--color-font-button1); }
     body .contenedor .contenedor_center .search_input #input_button_search button {
       width: 12%; }
       body .contenedor .contenedor_center .search_input #input_button_search button p {
@@ -124,24 +159,24 @@ body .contenedor .contenedor_center .search_input {
         padding: 8px 4px;
         margin: 1px 1px;
         font-size: 16px;
-        font-family: "Chakra Petch", sans-serif; }
+        font-family: var(--font-family-principal); }
     body .contenedor .contenedor_center .search_input #input_button_search .enable {
       border: 1px solid #110038;
-      box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-      background-color: #F7C9F3;
-      color: #110038; }
+      box-shadow: var(--box-shadow-button);
+      background-color: var(--color-background-button);
+      color: var(--color-font-button1); }
       body .contenedor .contenedor_center .search_input #input_button_search .enable:hover > p {
         border: 1px dashed #110038; }
       body .contenedor .contenedor_center .search_input #input_button_search .enable:hover {
-        background-color: #997D97;
-        box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF; }
+        background-color: var(--color-background-button-hover);
+        box-shadow: var(--box-shadow-button-hover); }
 
 body .contenedor .contenedor_center .search_input #results_suggested {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-evenly;
-  background-color: #E6E6E6;
-  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+  background-color: var(--color-background-search-div);
+  box-shadow: var(--box-shadow-search-div); }
   body .contenedor .contenedor_center .search_input #results_suggested ul {
     list-style: none;
     width: 82%; }
@@ -151,9 +186,9 @@ body .contenedor .contenedor_center .search_input #results_suggested {
       box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
       body .contenedor .contenedor_center .search_input #results_suggested ul li a {
         display: block;
-        font-family: "Chakra Petch", sans-serif;
+        font-family: var(--font-family-principal);
         font-size: 16px;
-        color: #110038;
+        color: var(--color-font-button);
         text-decoration: none;
         padding: 5px 0;
         margin: 1px; }
@@ -165,14 +200,14 @@ body .contenedor .contenedor_center .search_input #results_suggested {
 body .contenedor .contenedor_center #section-results-suggested, body .contenedor .contenedor_center #section-results-trends {
   margin-top: 64px; }
   body .contenedor .contenedor_center #section-results-suggested .top_input_section, body .contenedor .contenedor_center #section-results-trends .top_input_section {
-    font-family: "Chakra Petch", sans-serif;
-    color: #110038;
+    font-family: var(--font-family-principal);
+    color: var(--color-font-button1);
     font-size: 14px;
     display: block;
     width: 100%;
     background-color: #FFFAFE;
-    border: 1px solid #E6BBE2;
-    box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+    border: var(--color-border-top-input-section);
+    box-shadow: var(--box-shadow-top-input-section);
     padding: 7px 0px 7px 7px; }
 
 .div-results_trends {
@@ -191,25 +226,38 @@ body .contenedor .contenedor_center #section-results-suggested, body .contenedor
   justify-content: space-between;
   margin-top: 20px; }
   .div-results_suggested .div_item {
-    background-color: #E6E6E6;
-    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+    background-color: var(--color-background-boxmenu);
+    box-shadow: var(--box-shadow-boxmenu);
     padding: 4px;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-between; }
+    justify-content: space-between;
+    position: relative; }
     .div-results_suggested .div_item .top_item {
-      background: #4180f6;
-      background: linear-gradient(90deg, #4180f6 0%, #f7c9f3 100%);
+      background: var(--color-background-bar);
+      background: var(--color-gradient-bar);
       width: 280px;
       margin-bottom: 4px;
       display: inline-flex;
       justify-content: space-between; }
       .div-results_suggested .div_item .top_item h2 {
-        color: #FFFFFF;
+        color: var(--color-font-top-bar);
         font-size: 12px;
         font-weight: 400; }
       .div-results_suggested .div_item .top_item .close_svg {
         width: 16px; }
+    .div-results_suggested .div_item #see_more_button {
+      position: absolute;
+      left: 12px;
+      top: 250px;
+      width: 81px;
+      height: 34px;
+      border: 1px solid #4C2F99;
+      background-color: var(--color-background-button-gif);
+      box-shadow: var(--box-shadow-button-gif);
+      color: var(--color-font-top-bar);
+      font-size: 14px;
+      cursor: pointer; }
 
 * {
   box-sizing: border-box;
@@ -217,7 +265,8 @@ body .contenedor .contenedor_center #section-results-suggested, body .contenedor
   padding: 0; }
 
 body {
-  font-family: "Chakra Petch", sans-serif; }
+  font-family: var(--font-family-principal);
+  background-color: var(--background-body); }
   body .contenedor {
     width: 100%;
     min-width: 320px;
