--- a/css/_results-suggested.scss
+++ b/css/_results-suggested.scss
@@ -34,6 +34,7 @@ body{
                                 text-decoration: none;
                                 padding: 5px 0;
                                 margin: 1px;
+                                color: #110038;
 
                                 &:hover{
                                     border: 1px dashed #110038;
