--- a/css/_item-giphy-trends.scss
+++ b/css/_item-giphy-trends.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
-        position: relative;      
+        position: relative;
         
        
 
@@ -24,7 +24,7 @@
             margin-bottom: 4px;
             display: inline-flex;
             justify-content: space-between;
-
+            
                                     
 
             h2{
@@ -36,7 +36,9 @@
             }
 
             .close_svg{
-                width: 16px;                               
+                width: 16px;                
+            
+                
             }
 
                
@@ -44,6 +46,10 @@
         }
 
         .item-giphy-trends{
+
+            &:hover {
+                border: 1px dashed #110038;
+            } 
             
             
         }
@@ -59,7 +65,11 @@
             box-shadow: var(--box-shadow-button-gif);
             color: var(--color-font-top-bar);
             font-size: 14px;
-            cursor: pointer;            
+            cursor: pointer; 
+            
+            &:hover {
+                border: 1px dashed #110038;
+            }
 
         }
     }
